assets/objects/crate-toolbox/revisions/v0.66.0/NOTES.md
# crate-toolbox v0.66.0

L3 packaging/perf UPGRADE on the same `objectId`. No GLB. Not a new layer.

- After v0.65 pinned r170 MeshBasic `wireframeLinecap = 'round'` / `wireframeLinejoin = 'round'` on packed color-only unlit MeshBasic **materials** (and after v0.64 `wireframeLinewidth = 1` / v0.63 map-intensity companions / v0.62 envMap companions `combine` / `reflectivity` / `refractionRatio` / v0.61 Material `visible = true` / v0.60 Object3D `renderOrder = 0` / v0.59 Material `shadowSide = null` / v0.52 `wireframe = false` / v0.50 Mesh frustumCulled / v0.49 Mesh shadow-flag / opaque FrontSide / fog / toneMapped material pins / raycast disable / matrix freeze), **`pinColorOnlyUnlitBasicFlags` / `pinColorOnlyVisualMaterialFlags` also set r170 MeshBasic `envMapRotation` `(0, 0, 0)` / `order = 'XYZ'` on packed color-only unlit MeshBasic materials** (keeps the existing Euler instance — does not replace it). Existing fog/toneMapped/opaque FrontSide/blending/alpha/wireframe/depth/colorWrite/polygonOffset/stencil/clipping/alphaHash/forceSinglePass/NormalBlending companion/vertexColors/precision/shadowSide/visible/envMap companion/map-intensity companion/wireframeLinewidth/wireframe line-style pins stay in the same helper. Procedural create pins the three shared wood/brass/steel instances once at share time and again via the entity helper after raycast disable. Packaged ingest pins color-only MeshBasics after the same detect (does not hex-dedupe; does not invent materials). Does **not** pin `mesh.visible` (LOD visibility uses it). Does not change `layers` / `matrixWorldAutoUpdate`. Does **not** enable wireframe (`wireframe` stays pinned false from v0.52). Does not force envMap or attach maps. Does not change the `isColorOnlyUnlitBasic` map / lightMap / aoMap / specularMap / alphaMap / envMap gate. Does **not** merge meshes across `body` / `lidPivot` / `latchPivot` / `tool`, fold the fastener into an LOD batch (`fastener` / `fastenerMesh` stay outside `LOD_MERGE_SKIP_NAMES`), rewrite material type, invent a GLB, change matrix freeze, change raycast no-ops, change fog/toneMapped/opaque FrontSide/blending/alpha/wireframe/depth/colorWrite/polygonOffset/stencil/clipping/alphaHash/forceSinglePass/NormalBlending companions/vertexColors/precision/shadowSide/visible/envMap companions/map-intensity companions/wireframeLinewidth/wireframe line-style/shadow/frustumCulled/renderOrder pins, or change L4/L5 interaction. Named meshes `lidMesh` / `latchMesh` / `fastenerMesh` kept. The v0.37–v0.65 merge → weld → unused-attr strip → Uint16 compact → shared MeshBasic → Float16 → upload-release → matrix-freeze → raycast-disable → fog/toneMapped-pin → opaque-FrontSide-pin → shadow-flag-pin → frustumCulled-pin → blending/alpha-pin → GPU-state-pin → stencil-pin → clipping-pin → alphaHash-pin → NormalBlending-companions-pin → vertexColors-pin → precision-pin → shadowSide-pin → renderOrder-pin → visible-pin → envMap-companions-pin → map-intensity-companions-pin → wireframeLinewidth-pin → wireframe-line-style-pin pipeline stays intact.
- **Verified r170 API (do not assume):** a fresh `MeshBasicMaterial` already has `envMapRotation` as an Euler instance at `(0, 0, 0)` with `order === 'XYZ'` (`new Euler()` / `Euler.DEFAULT_ORDER`; `REVISION` 170). `isColorOnlyUnlitBasic` already requires `envMap` to be falsy. This pulse still pins those r170 `envMapRotation` defaults on color-only unlit stand-in **materials** so packaged GLBs that leave leftover non-zero `envMapRotation` get corrected even when `envMap` is null. A deliberately wrong color-only MeshBasic is corrected when it still passes `isColorOnlyUnlitBasic`. The existing Euler instance is kept — do **not** replace it with a new Euler. Do **not** pin `mesh.visible` — LOD visibility uses it. Do not enable wireframe. Do not force envMap or attach maps.
- **Why:** Accidental DCC / packaged GLB leftover non-zero MeshBasic `envMapRotation` still sits on the material even when `envMap` is null (still passes `isColorOnlyUnlitBasic`). Pinning the r170 MeshBasic default `(0, 0, 0)` keeps the Quest-safe opaque unlit contract. Material-state fence, not a geometry pack change. Does **not** invent custom shaders, transparent materials, pin `mesh.visible`, force envMap, attach maps, or enable wireframe.
- **Scope vs v0.65 wireframe line-style pin:** v0.65 hits the **3** unique shared color-only **materials** (wood / brass / steel) with r170 `wireframeLinecap = 'round'` / `wireframeLinejoin = 'round'`. v0.66 hits those same **3** materials with r170 `envMapRotation` `(0, 0, 0)` / `order = 'XYZ'` (same material family as v0.47–v0.65 fog/toneMapped/shadowSide/visible/envMap/map-intensity/wireframeLinewidth/line-style companions). Mapped / lit stay at authored / r170 Material defaults. Collider MeshBasics stay untouched (procedural colliders keep authored wireframe). Morph / interleaved skip the same pack-pipeline gate. Materials shared with a blocked collider / morph mesh skip the visual pin.
- **Gate (same as pack pipeline):** only color-only unlit MeshBasic. Skip `userData.collider` / `collider_*` names. Skip mapped / lit. Skip morph / interleaved geos (conservative). Skip materials shared with a blocked collider / morph mesh. Do not change `isColorOnlyUnlitBasic` (map / lightMap / aoMap / specularMap / alphaMap / envMap still must be falsy).
- **Measurement rule:** `userData.lod.stats.attrBytes` is the **pre-upload** CPU envelope (arrays still present at `attachToolboxLod`). After simulated / real GPU upload, live CPU attrBytes on those visuals → **0**; `BufferAttribute.count` (draws / tris / verts) stays. This pulse does not change that envelope.
- **Measured** `userData.lod.stats` (Three.js index counts + `position.count` + attribute/index byte length via `countGroupStats`; colliders skipped; unit tests, **not** headset) plus unique MeshBasic flags and visual Mesh shadow / frustum / renderOrder flags:

  | Level | Draws | Tris (index/3) | Unique verts (v0.39 weld) | attrBytes (pre-upload v0.44 Float16) | Unique MeshBasic | fog / toneMapped / opaque FrontSide / blending+alpha / GPU-state / stencil / clipping / alphaHash+forceSinglePass / NormalBlending companions / vertexColors / precision / shadowSide / visible / envMap companions / map-intensity companions / wireframeLinewidth / linecap / linejoin / envMapRotation | shadow-off meshes | frustumCulled-on meshes | renderOrder-0 meshes |
  | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
  | LOD0 | **6** | **240** | **230** | **2820** | wood + brass + steel | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0)** | **yes** | **yes** | **yes** |
  | LOD1 | **4** | **96** | **100** | **1176** | same wood + same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0)** | **yes** | **yes** | **yes** |
  | LOD2 | **2** | **24** | **48** | **432** | same wood | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0)** | **yes** | **yes** | **yes** |
  | Fastener (not LOD) | 1 | 12 | 24 | **216** | same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0)** | **yes** | **yes** | **yes** |
  | `drawCallsEstimate` (LOD0 + fastener) | **7** | | | | | | | | |

  Unique procedural MeshBasic instances stay **3**, all `fog === false` && `toneMapped === false` && `transparent === false` && `opacity === 1` && `depthWrite === true` && `depthTest === true` && `side === FrontSide` && `blending === NormalBlending` && `premultipliedAlpha === false` && `alphaTest === 0` && `wireframe === false` && `colorWrite === true` && `depthFunc === LessEqualDepth` && `polygonOffset === false` && `stencilWrite === false` && `stencilFunc === AlwaysStencilFunc` && `stencilFail === KeepStencilOp` && `clippingPlanes === null` && `clipIntersection === false` && `clipShadows === false` && `alphaHash === false` && `forceSinglePass === false` && `blendSrc === SrcAlphaFactor` && `blendDst === OneMinusSrcAlphaFactor` && `blendEquation === AddEquation` && `blendSrcAlpha === null` && `blendDstAlpha === null` && `blendEquationAlpha === null` && `vertexColors === false` && `precision === null` && `shadowSide === null` && `visible === true` && `combine === MultiplyOperation` && `reflectivity === 1` && `refractionRatio === 0.98` && `lightMapIntensity === 1` && `aoMapIntensity === 1` && `wireframeLinewidth === 1` && `wireframeLinecap === 'round'` && `wireframeLinejoin === 'round'` && `envMap === null` && `envMapRotation.x === 0` && `envMapRotation.y === 0` && `envMapRotation.z === 0`. Visual MeshBasic renderOrder-0 stay **13** (`renderOrder === 0`). Visual MeshBasic frustumCulled-on stay **13** (`frustumCulled === true`). Visual MeshBasic shadow-off stay **13** (`castShadow === false` && `receiveShadow === false`). Visual MeshBasic raycast-off stay **13**. Frozen MeshBasic stay **3** (body LOD0/1/2). Live MeshBasic stay **10** (lid/latch/tool LOD meshes + fastener). `userData.l2.uniqueMaterials` **3**. Draws / tris / unique verts / attrBytes / matrix freeze / raycast-off / unique MeshBasic / shadow-off / frustumCulled-on / renderOrder-0 unchanged vs v0.65. After simulated upload, CPU attrBytes on those 13 visual geos → 0.
- **Unit/mock evidence** (not headset): r170 default `new MeshBasicMaterial().envMapRotation` is Euler `(0, 0, 0)` / `order === 'XYZ'`; a wrong color-only MeshBasic with non-zero `envMapRotation` is corrected by `pinColorOnlyUnlitBasicFlags` (existing Euler instance kept); `envMap` stays null / not forced; wireframe stays false (pin does not enable wireframe); procedural wood/brass/steel stay Quest-safe; mapped / lit MeshBasic stay authored; collider MeshBasics stay authored / default (procedural colliders keep authored wireframe); `mesh.visible` is not pinned (LOD still uses group/mesh visibility); L4 `tryUse` closed→unlatched→open and L5 `tryDriveFastener` still mutate pivot / fastener transforms. Packaged ingest of a mock `lod*` fixture pins body + lid/latch/tool + fastener materials including a DCC leftover non-zero `envMapRotation` color-only MeshBasic; fail-soft (no lod groups) still pins those visuals. Mapped MeshBasic stays authored.
- Named meshes required by tests stay: `lidMesh`, `latchMesh`, `fastenerMesh`. Unique canvases stay **0**. Color-only unlit MeshBasic on LOD0 / LOD1 / LOD2. `setToolboxLod` is still visibility-only. Geometry, collider names, and L4/L5 activity are the v0.4.0–v0.65.0 set. Session present-path chain (v0.15–v0.22) and v0.8 allocation scrub stay as they were. The v0.66 `behavior.json` sidecar is frozen next to this manifest (`source.behavior`) so the revision resolves without reading a later current sidecar.
- **KTX2 / Basis** remains the packaging step when a DCC GLB lands. No GLB in this revision.
- Quest 3 frame time / FFR still **unmeasured**. Do not treat this pulse as a 90 Hz pass. 90 Hz / 72 fallback are **requested**, not measured. Pinning MeshBasic `envMapRotation` `(0, 0, 0)` is the intended delta; headset ms still **TODO**.
