assets/objects/crate-toolbox/revisions/v0.69.0/NOTES.md
# crate-toolbox v0.69.0

L3 packaging/perf UPGRADE on the same `objectId`. No GLB. Not a new layer.

- After v0.68 pinned r170 Material CustomBlending color/alpha companions (`blendColor` `(0, 0, 0)` / `blendAlpha = 0`) on packed color-only unlit MeshBasic **materials** (and after v0.67 pinned Object3D layers default on those same visual meshes), **`pinColorOnlyUnlitBasicMatrixWorldAutoUpdate` / `pinColorOnlyVisualMatrixWorldAutoUpdate` set r170 Object3D `matrixWorldAutoUpdate = true` (`Object3D.DEFAULT_MATRIX_WORLD_AUTO_UPDATE`) on packed color-only unlit MeshBasic visual meshes** (body LOD leaves + lid/latch/tool + fastener). Procedural create runs the helper after `pinColorOnlyVisualLayers`. Packaged ingest pins after the same detect (does not hex-dedupe; does not invent materials/meshes). Does **not** pin `mesh.visible` (LOD visibility uses it). Does **not** change `matrixAutoUpdate` (v0.45 already freezes `matrixAutoUpdate` on static body LOD leaves after one `updateMatrixWorld(true)`; lid/latch/tool/fastener stay live). Does **not** change `layers` / `blendColor` / `blendAlpha` / prior material pins. Does **not** merge meshes across `body` / `lidPivot` / `latchPivot` / `tool`, fold the fastener into an LOD batch (`fastener` / `fastenerMesh` stay outside `LOD_MERGE_SKIP_NAMES`), rewrite material type, invent a GLB, change matrix freeze, change raycast no-ops, change fog/toneMapped/opaque FrontSide/blending/alpha/wireframe/depth/colorWrite/polygonOffset/stencil/clipping/alphaHash/forceSinglePass/NormalBlending companions/vertexColors/precision/shadowSide/visible/envMap companions/map-intensity companions/wireframeLinewidth/wireframe line-style/envMapRotation/blendColor/blendAlpha/shadow/frustumCulled/renderOrder/layers pins, or change L4/L5 interaction. Named meshes `lidMesh` / `latchMesh` / `fastenerMesh` kept. The v0.37–v0.68 merge → weld → unused-attr strip → Uint16 compact → shared MeshBasic → Float16 → upload-release → matrix-freeze → raycast-disable → fog/toneMapped-pin → opaque-FrontSide-pin → shadow-flag-pin → frustumCulled-pin → blending/alpha-pin → GPU-state-pin → stencil-pin → clipping-pin → alphaHash-pin → NormalBlending-companions-pin → vertexColors-pin → precision-pin → shadowSide-pin → renderOrder-pin → visible-pin → envMap-companions-pin → map-intensity-companions-pin → wireframeLinewidth-pin → wireframe-line-style-pin → envMapRotation-pin → layers-pin → blendColor-pin pipeline stays intact.
- **Verified r170 API (do not assume):** a fresh `Mesh` / `Object3D` already has `matrixWorldAutoUpdate === true` (`Object3D.DEFAULT_MATRIX_WORLD_AUTO_UPDATE`; `REVISION` 170). This pulse still pins that r170 default on color-only unlit stand-in **meshes** so packaged GLBs that leave leftover `matrixWorldAutoUpdate = false` get corrected even when they still pass `isColorOnlyUnlitBasic`. A deliberately wrong color-only Mesh is corrected when it still passes `isColorOnlyUnlitBasic`. Do **not** pin `mesh.visible` — LOD visibility uses it. Do **not** change `matrixAutoUpdate` — v0.45 already freezes it on static body LOD leaves. Do not change `layers` / `blendColor` / `blendAlpha`.
- **Why:** Accidental DCC / packaged GLB leftover `matrixWorldAutoUpdate = false` on color-only unlit midtone visuals can stall automatic world-matrix updates from animated parents even when local `matrixAutoUpdate` policy is intentional. Pinning the r170 Object3D default keeps the Quest-safe transform contract without touching the v0.45 static-body freeze. Mesh-state fence, not a geometry pack change. Does **not** invent custom shaders, transparent materials, pin `mesh.visible`, change `matrixAutoUpdate`, or change `layers` / `blendColor` / `blendAlpha`.
- **Scope vs v0.68 blendColor pin:** v0.68 hits the **3** unique shared color-only **materials** (wood / brass / steel) with r170 `blendColor` `(0, 0, 0)` / `blendAlpha = 0`. v0.69 hits the **13** packed color-only visual **meshes** (body LOD leaves + lid/latch/tool + fastener) with r170 Object3D `matrixWorldAutoUpdate = true` (same visual-mesh family as v0.67 layers / v0.60 renderOrder / v0.50 frustumCulled / v0.49 shadow flags). Mapped / lit stay at authored / r170 Mesh defaults. Collider meshes stay untouched. Morph / interleaved skip the same pack-pipeline gate. Materials shared with a blocked collider / morph mesh skip the visual pin.
- **Gate (same as pack pipeline):** only color-only unlit MeshBasic. Skip `userData.collider` / `collider_*` names. Skip mapped / lit. Skip morph / interleaved geos (conservative). Skip materials shared with a blocked collider / morph mesh. Do not change `isColorOnlyUnlitBasic` (map / lightMap / aoMap / specularMap / alphaMap / envMap still must be falsy).
- **Measurement rule:** `userData.lod.stats.attrBytes` is the **pre-upload** CPU envelope (arrays still present at `attachToolboxLod`). After simulated / real GPU upload, live CPU attrBytes on those visuals → **0**; `BufferAttribute.count` (draws / tris / verts) stays. This pulse does not change that envelope.
- **Measured** `userData.lod.stats` (Three.js index counts + `position.count` + attribute/index byte length via `countGroupStats`; colliders skipped; unit tests, **not** headset) plus unique MeshBasic flags and visual Mesh shadow / frustum / renderOrder / layers / matrixWorldAutoUpdate flags:

  | Level | Draws | Tris (index/3) | Unique verts (v0.39 weld) | attrBytes (pre-upload v0.44 Float16) | Unique MeshBasic | fog / toneMapped / opaque FrontSide / blending+alpha / GPU-state / stencil / clipping / alphaHash+forceSinglePass / NormalBlending companions / vertexColors / precision / shadowSide / visible / envMap companions / map-intensity companions / wireframeLinewidth / linecap / linejoin / envMapRotation / blendColor / blendAlpha | shadow-off meshes | frustumCulled-on meshes | renderOrder-0 meshes | layers-default meshes | matrixWorldAutoUpdate-on meshes |
  | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
  | LOD0 | **6** | **240** | **230** | **2820** | wood + brass + steel | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | LOD1 | **4** | **96** | **100** | **1176** | same wood + same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | LOD2 | **2** | **24** | **48** | **432** | same wood | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | Fastener (not LOD) | 1 | 12 | 24 | **216** | same brass | **false / false / yes / yes / yes / off / null / off / SrcAlpha / false / null / null / true / Multiply / 1 / 0.98 / 1 / 1 / 1 / round / round / (0,0,0) / (0,0,0) / 0** | **yes** | **yes** | **yes** | **yes** | **yes** |
  | `drawCallsEstimate` (LOD0 + fastener) | **7** | | | | | | | | | | |

  Unique procedural MeshBasic instances stay **3**, all `fog === false` && `toneMapped === false` && `transparent === false` && `opacity === 1` && `depthWrite === true` && `depthTest === true` && `side === FrontSide` && `blending === NormalBlending` && `premultipliedAlpha === false` && `alphaTest === 0` && `wireframe === false` && `colorWrite === true` && `depthFunc === LessEqualDepth` && `polygonOffset === false` && `stencilWrite === false` && `stencilFunc === AlwaysStencilFunc` && `stencilFail === KeepStencilOp` && `clippingPlanes === null` && `clipIntersection === false` && `clipShadows === false` && `alphaHash === false` && `forceSinglePass === false` && `blendSrc === SrcAlphaFactor` && `blendDst === OneMinusSrcAlphaFactor` && `blendEquation === AddEquation` && `blendSrcAlpha === null` && `blendDstAlpha === null` && `blendEquationAlpha === null` && `vertexColors === false` && `precision === null` && `shadowSide === null` && `visible === true` && `combine === MultiplyOperation` && `reflectivity === 1` && `refractionRatio === 0.98` && `lightMapIntensity === 1` && `aoMapIntensity === 1` && `wireframeLinewidth === 1` && `wireframeLinecap === 'round'` && `wireframeLinejoin === 'round'` && `envMap === null` && `envMapRotation.x === 0` && `envMapRotation.y === 0` && `envMapRotation.z === 0` && `blendColor.r === 0` && `blendColor.g === 0` && `blendColor.b === 0` && `blendAlpha === 0`. Visual MeshBasic matrixWorldAutoUpdate-on **13** (`matrixWorldAutoUpdate === true`). Visual MeshBasic layers-default stay **13** (`layers.mask === 1` && `layers.isEnabled(0)`). Visual MeshBasic renderOrder-0 stay **13** (`renderOrder === 0`). Visual MeshBasic frustumCulled-on stay **13** (`frustumCulled === true`). Visual MeshBasic shadow-off stay **13** (`castShadow === false` && `receiveShadow === false`). Visual MeshBasic raycast-off stay **13**. Frozen MeshBasic stay **3** (body LOD0/1/2). Live MeshBasic stay **10** (lid/latch/tool LOD meshes + fastener). `userData.l2.uniqueMaterials` **3**. Draws / tris / unique verts / attrBytes / matrix freeze / raycast-off / unique MeshBasic / shadow-off / frustumCulled-on / renderOrder-0 / layers-default unchanged vs v0.68. After simulated upload, CPU attrBytes on those 13 visual geos → 0.
- **Unit/mock evidence** (not headset): r170 default `new Mesh().matrixWorldAutoUpdate === true` / `Object3D.DEFAULT_MATRIX_WORLD_AUTO_UPDATE === true`; a wrong color-only Mesh with `matrixWorldAutoUpdate = false` is corrected by `pinColorOnlyUnlitBasicMatrixWorldAutoUpdate`; body leaves still have `matrixAutoUpdate === false` where v0.45 froze them; `mesh.visible` is not pinned (LOD still uses group/mesh visibility); `layers` / `blendColor` / `blendAlpha` stay intact; prior pins including layers-default **13** stay intact; procedural wood/brass/steel stay Quest-safe; mapped / lit Mesh stay authored; collider meshes stay authored / default; L4 `tryUse` closed→unlatched→open and L5 `tryDriveFastener` still mutate pivot / fastener transforms. Packaged ingest of a mock `lod*` fixture pins body + lid/latch/tool + fastener meshes including a DCC leftover `matrixWorldAutoUpdate = false` color-only Mesh; fail-soft (no lod groups) still pins those visuals. Mapped Mesh stays authored.
- Named meshes required by tests stay: `lidMesh`, `latchMesh`, `fastenerMesh`. Unique canvases stay **0**. Color-only unlit MeshBasic on LOD0 / LOD1 / LOD2. `setToolboxLod` is still visibility-only. Geometry, collider names, and L4/L5 activity are the v0.4.0–v0.68.0 set. Session present-path chain (v0.15–v0.22) and v0.8 allocation scrub stay as they were. The v0.69 `behavior.json` sidecar is frozen next to this manifest (`source.behavior`) so the revision resolves without reading a later current sidecar.
- **KTX2 / Basis** remains the packaging step when a DCC GLB lands. No GLB in this revision.
- Quest 3 frame time / FFR still **unmeasured**. Do not treat this pulse as a 90 Hz pass. 90 Hz / 72 fallback are **requested**, not measured. Pinning Object3D `matrixWorldAutoUpdate` to r170 default `true` is the intended delta; headset ms still **TODO**.
